--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -15,7 +15,8 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v1"
 
-imagePullSecrets: []
+imagePullSecrets:
+- name: acr-secret
 nameOverride: ""
 fullnameOverride: ""
 
